--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 
 <div id="container">
 	<div id="image_container">
-		<img id="imagen" src="imagen.jpg"/>
+		<img id="imagen" src="/imagen.jpg"/>
 	</div>
 </div>
 
